Bug 426217 - "New Institution" edits instead of creating institution
Summary: "New Institution" edits instead of creating institution
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.8
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-05 16:54 UTC by antoine
Modified: 2020-09-12 07:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description antoine 2020-09-05 16:54:04 UTC
SUMMARY

"New Institution" button or menu sometimes edits institution instead of creating institution

STEPS TO REPRODUCE
1. Open a kmm file and edit an institution
2. create a new institution by clicking on the "Institution > New institution"
3. 

OBSERVED RESULT
A dialog window opens with the data of the previous institution

EXPECTED RESULT
A dialog window without data

SOFTWARE/OS VERSIONS
xubuntu 20.04

ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2020-09-12 07:10:49 UTC
It seems like an edit, but in fact it is a new institution with the data of the previous edit left in place.
Comment 2 Thomas Baumgart 2020-09-12 07:11:23 UTC
Git commit 59974fc0f76ae1daf38f5ef26141d8c53a15f559 by Thomas Baumgart.
Committed on 12/09/2020 at 07:11.
Pushed by tbaumgart into branch 'master'.

Start creation of new institution with empty data fields

M  +3    -2    kmymoney/views/kinstitutionsview.cpp

https://invent.kde.org/office/kmymoney/commit/59974fc0f76ae1daf38f5ef26141d8c53a15f559
Comment 3 Thomas Baumgart 2020-09-12 07:12:21 UTC
Git commit 222785d2ad5bda3388c64da22fa885135794801b by Thomas Baumgart.
Committed on 12/09/2020 at 07:12.
Pushed by tbaumgart into branch '5.1'.

Start creation of new institution with empty data fields
FIXED-IN: 5.1.1

(cherry picked from commit 59974fc0f76ae1daf38f5ef26141d8c53a15f559)

M  +3    -2    kmymoney/views/kinstitutionsview.cpp

https://invent.kde.org/office/kmymoney/commit/222785d2ad5bda3388c64da22fa885135794801b