Start creation of new institution with empty data fields

BUG: 426217
FIXED-IN: 5.1.1

(cherry picked from commit 59974fc0f76ae1daf38f5ef26141d8c53a15f559)